[v0.9.437] Turned the font size of the on-screen controls and progress window into its own setting.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -3,6 +3,7 @@
 		"tracker_font_name":	"Minecraft.ttf",
 		"tracker_font_size":	16,
 		"tracker_sub_font_size": 14,
+		"tracker_ui_font_size": 16,
 		"overlay_font_name":	"Minecraft.ttf",
 		"ui_font_name":	"Roboto-Regular.ttf",
 		"ui_font_size":	16,
