--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -18,6 +18,7 @@
 		"overlay_scroll_speed":	1,
 		"overlay_progress_text_align":	"left",
 		"overlay_animation_speedup":	false,
+		"overlay_row1_spacing":	8,
 		"overlay_row3_remove_completed":	false,
 		"overlay_stat_cycle_speed":	3,
 		"notes_use_roboto_font":	false,
