--- a/resources/reference_files/settings.json
+++ b/resources/reference_files/settings.json
@@ -162,7 +162,7 @@
 	"path_mode":	"auto",
 	"manual_saves_path":	"",
 	"version":	"1.16.1",
-	"display_version_str": "1.16.1",
+	"display_version": "1.16.1",
 	"category":	"all_advancements",
 	"optional_flag":	"",
 	"lang_flag":	"",
