[v0.9.454] Made Category Display Name also separately configurable with default being the standard naming convention so far (removing underscores, capitalizing next letter).

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -165,6 +165,7 @@
 	"display_version": "1.16.1",
 	"category":	"all_advancements",
 	"optional_flag":	"",
+	"category_display_name": "All Advancements",
 	"lang_flag":	"",
 	"hotkeys":	[]
 }
