--- a/resources/reference_files/settings.json
+++ b/resources/reference_files/settings.json
@@ -165,6 +165,7 @@
 	"display_version": "1.16.1",
 	"category":	"all_advancements",
 	"optional_flag":	"",
+	"category_display_name": "All Advancements",
 	"lang_flag":	"",
 	"hotkeys":	[]
 }
