[v0.9.510] Fixed legacy all_achievements templates having one achievement set to hidden. Added setting to adjust the size of the shared icon size. Default is 32.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -159,6 +159,7 @@
 		"adv_bg_half_done_path":	"advancement_background_half_done.png",
 		"adv_bg_done_path":	"advancement_background_done.png",
 		"overlay_row1_spacing":	8,
+		"overlay_row1_shared_icon_size":	32,
 		"overlay_row2_custom_spacing_enabled":	false,
 		"overlay_row2_custom_spacing":	192,
 		"overlay_row3_custom_spacing_enabled":	false,
