--- a/resources/reference_files/settings.json
+++ b/resources/reference_files/settings.json
@@ -159,6 +159,7 @@
 		"adv_bg_half_done_path":	"advancement_background_half_done.png",
 		"adv_bg_done_path":	"advancement_background_done.png",
 		"overlay_row1_spacing":	8,
+		"overlay_row1_shared_icon_size":	32,
 		"overlay_row2_custom_spacing_enabled":	false,
 		"overlay_row2_custom_spacing":	192,
 		"overlay_row3_custom_spacing_enabled":	false,
