[v0.9.527] Organized credits for official templates in README.md file. Added a simple progress counter to the automatic updating popups. Made the "Track Active Instance" setting default.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -172,7 +172,7 @@
 		"scrollable_list_threshold":	16,
 		"tracker_list_scroll_speed":	36
 	},
-	"path_mode":	"auto",
+	"path_mode":	"instance",
 	"manual_saves_path":	"",
 	"version":	"1.16.1",
 	"display_version": "1.16.1",
