[v0.9.546] Added new checkbox to lock the Display Name.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -179,6 +179,7 @@
 	"category":	"all_advancements",
 	"optional_flag":	"",
 	"category_display_name": "All Advancements",
+	"lock_category_display_name": false,
 	"lang_flag":	"",
 	"hotkeys":	[]
 }
