[v0.9.548] Added Dilu as Beta tester. Made advancely remember the pan, zoom and lock state of the trackermap.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -181,5 +181,12 @@
 	"category_display_name": "All Advancements",
 	"lock_category_display_name": false,
 	"lang_flag":	"",
-	"hotkeys":	[]
+	"hotkeys":	[],
+	"view_state":	{
+		"pan_x":	0,
+		"pan_y":	0,
+		"zoom":	1,
+		"locked":	false,
+		"locked_width":	0
+	}
 }
