--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,12 @@
+# Copyright (c) 2026 LNXSeus. All Rights Reserved.
+#
+# This project is proprietary software. You are granted a license to use the software as-is.
+# You may not copy, distribute, modify, reverse-engineer, or use this software
+# or its source code in any way without the express written permission of the copyright holder.
+#
+# Created by Linus on 14.09.2025.
+#
+
 name: Build and Package
 
 # This workflow runs on pushes and pull requests to the main branches.
