--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,8 +59,10 @@ jobs:
         run: |
           sudo apt-get update
           # Added 'rpm' here so CPack can generate Fedora packages
-          sudo apt-get install -y build-essential cmake git libcurl4-openssl-dev libx11-dev libxext-dev libxrandr-dev libxcursor-dev libxfixes-dev libxi-dev libxss-dev libwayland-dev libdecor-0-dev libxkbcommon-dev libfreetype6-dev libharfbuzz-dev libasound2-dev libxtst-dev libsdl3-dev libsdl3-image-dev libsdl3-ttf-dev rpm
-
+          sudo apt-get install -y build-essential cmake git libcurl4-openssl-dev libx11-dev libxext-dev libxrandr-dev libxcursor-dev libxfixes-dev libxi-dev libxss-dev libwayland-dev libdecor-0-dev libxkbcommon-dev libfreetype6-dev libharfbuzz-dev libasound2-dev libxtst-dev rpm
+          git clone https://github.com/libsdl-org/SDL.git -b main && cd SDL && cmake -B build && cmake --build build && sudo cmake --install build && cd ..
+          git clone https://github.com/libsdl-org/SDL_image.git -b main && cd SDL_image && cmake -B build && cmake --build build && sudo cmake --install build && cd ..
+          git clone https://github.com/libsdl-org/SDL_ttf.git -b main && cd SDL_ttf && cmake -B build && cmake --build build && sudo cmake --install build && cd ..
       - name: Configure CMake (Linux)
         run: cmake -B build -DCMAKE_BUILD_TYPE=Release
 
@@ -107,9 +109,9 @@ jobs:
           cp -r resources release/
           cp _PLEASE_READ_ME.txt LICENSES.txt README.md release/
           # Copy dependencies for portable use
-          cp /usr/lib/x86_64-linux-gnu/libSDL3.so.0 release/
-          cp /usr/lib/x86_64-linux-gnu/libSDL3_image.so.0 release/
-          cp /usr/lib/x86_64-linux-gnu/libSDL3_ttf.so.0 release/
+          cp /usr/local/lib/libSDL3.so.0 release/
+          cp /usr/local/lib/libSDL3_image.so.0 release/
+          cp /usr/local/lib/libSDL3_ttf.so.0 release/
 
       # --- Upload Legacy Artifact ---
       # This preserves the exact name 'Advancely-v...-Linux'
