Change "Creator" to "Maintainer" in PKGBUILD as per PKGBUILD standard

--- a/packaging/linux/PKGBUILD
+++ b/packaging/linux/PKGBUILD
@@ -1,4 +1,4 @@
-# Creator: Rodney van den Velden <rodney@dfagaming.nl>
+# Maintainer: Rodney van den Velden <rodney@dfagaming.nl>
 
 pkgname=advancely
 pkgver=1.0.29
