--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,9 +31,9 @@ jobs:
           VERSION=$(grep '#define ADVANCELY_VERSION' source/main.h | sed -E 's/.*"v([0-9]+\.[0-9]+\.[0-9]+)".*/\1/')
           echo "Detected Version: $VERSION"
           
-          # 2. Update PKGBUILD (packaging/linux/PKGBUILD)
-          sed -i "s/^pkgver=.*/pkgver=$VERSION/" packaging/linux/PKGBUILD
-          sed -i "s/^pkgrel=.*/pkgrel=1/" packaging/linux/PKGBUILD
+#          # 2. Update PKGBUILD (packaging/linux/PKGBUILD) - Should only be done for Releases
+#          sed -i "s/^pkgver=.*/pkgver=$VERSION/" packaging/linux/PKGBUILD
+#          sed -i "s/^pkgrel=.*/pkgrel=1/" packaging/linux/PKGBUILD
           
           # 3. Update Metainfo (packaging/linux/dev.LNXSeus.Advancely.metainfo.xml)
           METAINFO="packaging/linux/dev.LNXSeus.Advancely.metainfo.xml"
@@ -89,7 +89,7 @@ jobs:
           cpack -G "DEB;RPM"
           ls -l *.deb *.rpm # List files to verify generation
           
-      # --- NEW: Upload Packages Separately ---
+      # --- Upload Packages Separately ---
       # This creates a NEW artifact (e.g., Advancely-v1.0.15-Linux-Packages.zip)
       # It does NOT interfere with the auto-updater's artifact.
       - name: Upload Linux Packages (.deb/.rpm)
@@ -105,13 +105,15 @@ jobs:
         shell: bash
         run: |
           mkdir release
+          mkdir release/lib
           cp build/Advancely release/
           cp -r resources release/
           cp _PLEASE_READ_ME.txt LICENSES.txt README.md release/
-          # Copy dependencies for portable use
-          cp /usr/local/lib/libSDL3.so.0 release/
-          cp /usr/local/lib/libSDL3_image.so.0 release/
-          cp /usr/local/lib/libSDL3_ttf.so.0 release/
+          # Copy dependencies for portable use into the lib directory
+          # precisely matching the $ORIGIN/lib RPATH set in CMake
+          cp /usr/local/lib/libSDL3.so.0 release/lib/
+          cp /usr/local/lib/libSDL3_image.so.0 release/lib/
+          cp /usr/local/lib/libSDL3_ttf.so.0 release/lib/
 
       # --- Upload Legacy Artifact ---
       # This preserves the exact name 'Advancely-v...-Linux'
